--- a/data/resources/strategy/config.json
+++ b/data/resources/strategy/config.json
@@ -16,6 +16,14 @@
 			"required": false,
 			"id": "dec",
 			"order": 1
+		},
+		"userId": {
+			"name": "userId",
+			"type": "string",
+			"typeLabel": "string",
+			"required": true,
+			"id": "userId",
+			"order": 2
 		}
 	}
 }
