--- a/fontend-new/bower.json
+++ b/fontend-new/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "angularjs#^1.5.8",
     "bootstrap": "^3.3.7",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "chart.js": "chartjs#^2.3.0"
   }
 }
