--- a/fontend-new/package.json
+++ b/fontend-new/package.json
@@ -8,5 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.17.0",
+    "gulp": "^3.9.1",
+    "gulp-watch": "^4.3.10"
+  }
 }
