--- a/fontend-new/bower.json
+++ b/fontend-new/bower.json
@@ -18,6 +18,7 @@
     "angular": "angularjs#^1.5.8",
     "bootstrap": "^3.3.7",
     "angular-ui-router": "^0.3.1",
-    "chart.js": "chartjs#^2.3.0"
+    "chart.js": "chartjs#^2.3.0",
+    "angular-bootstrap": "^2.1.4"
   }
 }
